k8s/member-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
      - name: member-service
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: hone-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: member-service
