k8s/search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service-deployment
  namespace: hone-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: hone-nodes
      containers:
      - name: search-service
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests: 
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 10

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 15
          timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: hone-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: search-service
