k8s/workspace-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-service-deployment
  namespace: hone-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workspace-service
  template:
    metadata:
      labels:
        app: workspace-service
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: hone-nodes
      containers:
      - name: workspace-service
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "1Gi"

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
  namespace: hone-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: workspace-service
